@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-08T16:06:55Z",
+  "timestamp" : "2022-07-09T00:25:57Z",
   "count_outdated" : 495,
   "uniques_outdated" : 93,
-  "count" : 555,
-  "uniques" : 104,
+  "count" : 557,
+  "uniques" : 105,
   "views" : [
     {
       "timestamp": "2022-06-26T00:00:00Z",
@@ -56,10 +56,10 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
