@@ -1,6 +1,6 @@
 {
-  "count": 60,
-  "uniques": 10,
+  "count": 62,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2022-06-26T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
